<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SisPrex</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SisPrex Splash</string>
    <string name="app_slogan">Organize seus preços da melhor maneira</string>
    <string name="txt_usuario">Usuário</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_logar">Logar</string>
    <string name="title_activity_pesquisa">PesquisaActivity</string>
    <string name="txt_cod_desc">Codigo ou Descrição</string>
    <string name="title_activity_detalhes">DetalhesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="txt_desc_completa">Descrição Completa</string>
    <string name="txt_desc_resumida">Descrição Resumida</string>
    <string name="txt_identificador">Identificador</string>
    <string name="txt_ean">EAN</string>
    <string name="txt_valor">Valor</string>
    <string name="txt_sugerir_edicao">SUGERIR UMA EDIÇÃO</string>
    <string name="txt_imprimir_etiqueta">Imprimir Etiqueta</string>
    <string name="txt_null"></string>
    <string name="title_activity_edicao">EdicaoActivity</string>
    <string name="txt_de">De: </string>
    <string name="txt_para">Para: </string>
    <string name="txt_enviar_sugestao">Enviar Sugestão</string>
    <string name="title_activity_carga">CargaActivity</string>
    <string name="txt_carga_tabelas">Deseja fazer carga de tabelas?</string>

</resources>
