<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.superquinto.sisprex.DetalhesActivity" >

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_identificador"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/txtIdentificador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_null" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ean"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/txtEan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_null" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc_completa"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/txtDescCompleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_null" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc_resumida"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/txtDescResumida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_null" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_valor"
        android:textColor="#aaa" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_null"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="print"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/txt_imprimir_etiqueta" />

    <TextView
        android:id="@+id/btnSugerirEdicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/txt_sugerir_edicao"
        android:textColor="#11f" />

</LinearLayout>
